[tool.poetry]
name = "nonblocking-logging"
version = "0.1.0"
description = ""
authors = ["Ersain Dinmukhamed"]
readme = "README.md"
packages = [{include = "nonblocking_logging"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
